@@ -9,15 +9,9 @@
  --active-color:var(--accent-color);
  --scrollbar-thumb-color:#5f5f5f;
  --scrollbar-thumb-hover-color:#7f7f7f;
- --scrollbar-track-color:#111;
- --scrollbar-corner-color:#111;
  --background-color:#000;
  --background-shadow-color:rgba(0, 0, 0, 0.8);
  --subtoolbar-shadow-color:rgba(0, 0, 0, 0.5);
- --dialog-toolbar-color:#000;
- --bottom-toolbar-color:#000;
- --top-toolbar-color:#000;
- --sub-toolbar-color:#000;
  --bottom-toolbar-border-color:#1f1f1f;
  --top-toolbar-border-color:#1f1f1f;
  --sub-toolbar-border-color:#1f1f1f;
