@@ -9,15 +9,9 @@
  --active-color:var(--accent-color);
  --scrollbar-thumb-color:#5f5f5f;
  --scrollbar-thumb-hover-color:#7f7f7f;
- --scrollbar-track-color:#2f2f2f;
- --scrollbar-corner-color:#222;
  --background-color:#081f22;
  --background-shadow-color:rgba(32, 32, 32, 0.9);
  --subtoolbar-shadow-color:rgba(32, 32, 32, 0.5);
- --dialog-toolbar-color:#081f22;
- --bottom-toolbar-color:#081f22;
- --top-toolbar-color:#081f22;
- --sub-toolbar-color:#081f22;
  --bottom-toolbar-border-color:#0a343a;
  --top-toolbar-border-color:#0a343a;
  --sub-toolbar-border-color:#0a343a;
