@@ -1,56 +1,0 @@
-/**
- * LMS-Material
- *
- * Copyright (c) 2018-2024 Craig Drummond <craig.p.drummond@gmail.com>
- * MIT license.
- */
-
-:root {
- --active-color:var(--accent-color);
- --scrollbar-thumb-color:#5f5f5f;
- --scrollbar-thumb-hover-color:#7f7f7f;
- --scrollbar-track-color:#2f2f2f;
- --scrollbar-corner-color:#222;
- --background-color:#212121;
- --background-shadow-color:rgba(32, 32, 32, 0.9);
- --subtoolbar-shadow-color:rgba(32, 32, 32, 0.5);
- --dialog-toolbar-color:#212121;
- --bottom-toolbar-color:#212121;
- --top-toolbar-color:#212121;
- --sub-toolbar-color:#212121;
- --bottom-toolbar-border-color:#2f2f2f;
- --top-toolbar-border-color:#2f2f2f;
- --sub-toolbar-border-color:#2f2f2f;
- --dialog-toolbar-border-color:#2f2f2f;
- --splitter-color:#2f2f2f;
- --icon-color:#edece7;
- --dlg-icon-color:#edece7;
- --list-item-border-color:#2f2f2f;
- --subheader-color:#edece7;
- --text-shadow-color:#212121;
- --text-color:#edece7;
- --dialog-toolbar-text-color:#edece7;
- --top-toolbar-text-color:#edece7;
- --sub-toolbar-text-color:#edece7;
- --bottom-toolbar-text-color:#edece7;
- --active-nav-btn-color:var(--accent-color);
- --toolbar-volume-color:var(--primary-color);
- --bottom-position-slider-color:var(--primary-color);
- --browse-header-color:rgba(64, 64, 64, 0.3);
- --nav-hover-color:rgba(96, 96, 96, 0.2)!important;
- --popup-background-color:#303030;
- --popup-border-color:#111111;
- --popup-divider-color:var(--scrollbar-thumb-color);
-}
-
-.np-info-cover {
- background-color:#212121;
-}
-
-.lms-toolbar .v-btn__content i.active-btn {
- color:var(--active-color) !important;
-}
-
-.v-overlay--active:before {
- opacity:0.8!important;
-}
