@@ -9,15 +9,9 @@
  --active-color:var(--primary-color);
  --scrollbar-thumb-color:#8e9192;
  --scrollbar-thumb-hover-color:#6e7172;
- --scrollbar-track-color:#f5f5f5;
- --scrollbar-corner-color:#e0e0e0;
  --background-color:#fafafa;
  --background-shadow-color:rgba(250, 250, 250, 0.9);
  --subtoolbar-shadow-color:rgba(250, 250, 250, 0.75);
- --dialog-toolbar-color:#f5f5f5;
- --bottom-toolbar-color:#f5f5f5;
- --top-toolbar-color:#f5f5f5;
- --sub-toolbar-color:#f5f5f5;
  --bottom-toolbar-border-color:#e0e0e0;
  --top-toolbar-border-color:#e0e0e0;
  --sub-toolbar-border-color:#e0e0e0;
