@@ -9,15 +9,9 @@
  --active-color:var(--accent-color);
  --scrollbar-thumb-color:#5f5f5f;
  --scrollbar-thumb-hover-color:#7f7f7f;
- --scrollbar-track-color:#303030;
- --scrollbar-corner-color:#2c2c2c;
  --background-color:#2c2c2c;
  --background-shadow-color:rgba(45, 45, 45, 0.9);
  --subtoolbar-shadow-color:rgba(45, 45, 45, 0.5);
- --dialog-toolbar-color:#303030;
- --bottom-toolbar-color:#303030;
- --top-toolbar-color:#303030;
- --sub-toolbar-color:#303030;
  --bottom-toolbar-border-color:#1b1b1b;
  --top-toolbar-border-color:#1b1b1b;
  --sub-toolbar-border-color:#1b1b1b;
