@@ -9,15 +9,9 @@
  --active-color:var(--primary-color);
  --scrollbar-thumb-color:#8e9192;
  --scrollbar-thumb-hover-color:#6e7172;
- --scrollbar-track-color:#cecece;
- --scrollbar-corner-color:#fcfcfc;
  --background-color:#fcfcfc;
  --background-shadow-color:rgba(249, 249, 249, 0.9);
  --subtoolbar-shadow-color:rgba(249, 249, 249, 0.75);
- --dialog-toolbar-color:#ebebeb;
- --bottom-toolbar-color:#ebebeb;
- --top-toolbar-color:#ebebeb;
- --sub-toolbar-color:#ebebeb;
  --bottom-toolbar-border-color:#cdc7c2;
  --top-toolbar-border-color:#cdc7c2;
  --sub-toolbar-border-color:#cdc7c2;
