@@ -9,15 +9,9 @@
  --active-color:var(--accent-color);
  --scrollbar-thumb-color:#5f5f5f;
  --scrollbar-thumb-hover-color:#7f7f7f;
- --scrollbar-track-color:#313131;
- --scrollbar-corner-color:#353535;
  --background-color:#272625;
  --background-shadow-color:rgba(38, 38, 38, 0.9);
  --subtoolbar-shadow-color:rgba(38, 38, 38, 0.5);
- --dialog-toolbar-color:#353537;
- --bottom-toolbar-color:#353537;
- --top-toolbar-color:#353537;
- --sub-toolbar-color:#272625;
  --bottom-toolbar-border-color:#0a0a09;
  --top-toolbar-border-color:#0a0a09;
  --sub-toolbar-border-color:#0a0a09;
