@@ -9,17 +9,11 @@
  --active-color:var(--primary-color);
  --scrollbar-thumb-color:#8e9192;
  --scrollbar-thumb-hover-color:#6e7172;
- --scrollbar-track-color:#f5f5f5;
- --scrollbar-corner-color:#c0c1c0;
  --background-color:#fff;
  --background-shadow-color:rgba(255, 255, 255, 0.9);
  --subtoolbar-shadow-color:rgba(255, 255, 255, 0.75);
  --background-fade-start:rgba(255, 255, 255, 0);
  --background-fade-end:rgba(255, 255, 255, 1);
- --dialog-toolbar-color:#e1dfe2;
- --bottom-toolbar-color:#e1dfe2;
- --top-toolbar-color:#e1dfe2;
- --sub-toolbar-color:#f6f5f4;
  --bottom-toolbar-border-color:#cdc7c2;
  --top-toolbar-border-color:#cdc7c2;
  --sub-toolbar-border-color:#cdc7c2;
