@@ -9,15 +9,9 @@
  --active-color:var(--accent-color);
  --scrollbar-thumb-color:#5f5f5f;
  --scrollbar-thumb-hover-color:#7f7f7f;
- --scrollbar-track-color:#171717;
- --scrollbar-corner-color:#171717;
  --background-color:#202020;
  --background-shadow-color:rgba(32, 32, 32, 0.9);
  --subtoolbar-shadow-color:rgba(32, 32, 32, 0.5);
- --dialog-toolbar-color:#000000;
- --bottom-toolbar-color:#000000;
- --top-toolbar-color:#000000;
- --sub-toolbar-color:#191919;
  --bottom-toolbar-border-color:#000000;
  --top-toolbar-border-color:#000000;
  --sub-toolbar-border-color:#000000;
