@@ -9,17 +9,11 @@
  --active-color:var(--primary-color);
  --scrollbar-thumb-color:#8e9192;
  --scrollbar-thumb-hover-color:#6e7172;
- --scrollbar-track-color:#f0f0f0;
- --scrollbar-corner-color:#f0f0f0;
  --background-color:#fff;
  --background-shadow-color:rgba(255, 255, 255, 0.9);
  --subtoolbar-shadow-color:rgba(255, 255, 255, 0.75);
  --background-fade-start:rgba(255, 255, 255, 0);
  --background-fade-end:rgba(255, 255, 255, 1);
- --dialog-toolbar-color:#fff;
- --bottom-toolbar-color:#fff;
- --top-toolbar-color:#fff;
- --sub-toolbar-color:#fff;
  --bottom-toolbar-border-color:#e1e1e1;
  --top-toolbar-border-color:#e1e1e1;
  --sub-toolbar-border-color:#e1e1e1;
