@@ -20,7 +20,7 @@
   my $windowTitle=Plugins::MaterialSkin::Plugin->windowTitle();
   my $ua=$stash->get("userAgent");
   my $query=$stash->get("url_query");
-  my $theme='darker';
+  my $theme='dark';
   my $themeColor='212121';
   my $mobile=index($ua, 'Android') != -1 || index($ua, 'iPad') != -1 || index($ua, 'iPhone') != -1 || index($ua, 'SafariViewService') != -1 || index($ua, 'MobileSafari') != -1 || (index($ua, 'Macintosh') != -1 && index($ua, '(KHTML, like Gecko) Version') != -1) ? 1 : 0;
   # Now check to see if defaultTheme or themeColor were specified in URL
@@ -44,7 +44,7 @@
       $themeColor = substr($query, $start);
     }
   }
-  print("  <link href=\"html/css/themes/${theme}.css?r=$version\" rel=\"stylesheet\" id=\"themecss\" rel=\"stylesheet\" onerror=\"setTheme('darker')\">\n");
+  print("  <link href=\"html/css/themes/${theme}.css?r=$version\" rel=\"stylesheet\" id=\"themecss\" rel=\"stylesheet\" onerror=\"setTheme('dark')\">\n");
   print("  <link href=\"html/css/variant/standard.css?r=$version\" rel=\"stylesheet\" id=\"variantcss\">\n");
   print("  <link href=\"html/css/colors/blue.css?r=$version\" rel=\"stylesheet\" id=\"colorcss\">\n");
   print("  <link href=\"html/css/style.css?r=$version\" rel=\"stylesheet\">\n");
