@@ -21,7 +21,7 @@
    theme = 'dark';
  } else if(theme=='auto') {
    const prefersLight = window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches;
-   theme = prefersLight ? 'light' : 'darker';
+   theme = prefersLight ? 'light' : 'dark';
  }
  let t = theme.split('-');
  let variant = t.length>1 && ('colored'==t[t.length-1] || 'standard'==t[t.length-1]) ? t.pop() : 'standard';
